fixing navbar issue on mobile

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -1,6 +1,6 @@
 @use'../custom' as *;
 @use'../components/mixins' as *;
-.nav {
+nav {
     z-index: 1;
 }
 .menu {
